# spectra-learning

./: .gitignore  .modalignore  AGENTS.md  CLAUDE.md  autoresearch.md  check_dataset_epochs.py  eval.py  finetune.py  finetune_adduct_precursor.py  input_pipeline.py  input_pipeline_gems_set.py  input_pipeline_lightning.py  input_pipeline_temporal.py  linear_probe.py  main.py  massspec_probe.py  measure_token_lengths.py  modal_train.py  pyproject.toml  train.py  train_mae.py  train_temporal.py  tune.py  visualize_tokenization.py
configs/: _defaults.py  gems_a_50_mask.py  gems_a_50_mask_finetune.py  gems_a_50_mask_finetune_adduct_precursor.py  gems_a_50_mask_finetune_fp.py  gems_a_dataset.py  gems_a_masked_latent_index.py  gems_a_masked_latent_index_large.py  gems_a_masked_latent_index_large_separate_rope.py  gems_a_masked_latent_index_large_unified.py  gems_a_masked_latent_index_small.py  gems_a_masked_latent_index_small_dir_rad.py  gems_a_masked_latent_index_small_noln.py  gems_a_masked_latent_index_small_separate_rope.py  gems_a_masked_latent_index_small_separate_rope_noln.py  gems_a_masked_latent_index_xtra_large.py  gems_a_multi.py  gems_a_temporal.py  gems_a_temporal_small.py  gems_a_test.py  gems_formula_dataset.py  gems_small.py
kernels/: fused_rope.py
models/: augmentation.py  bert.py  bert_torch.py  losses.py  mae.py  model.py  peak_features.py  utils.py
networks/: __init__.py  isab_triton.py  set_transformer_torch.py  transformer.py  transformer_torch.py
notebooks/: architecture_visualization.ipynb  augmentation_analysis.ipynb  debug_embedding_geometry_TEST_ISAB3.ipynb  debug_embedding_geometry_executed.ipynb  debug_embedding_geometry_modal_peakcount_executed.ipynb  debug_embedding_geometry_tune_jepa_sigreg_global_15.executed.ipynb  debug_embedding_geometry_tune_jepa_sigreg_global_16.executed.ipynb  embedding_comparison.ipynb  fourier_feature_analysis_executed.ipynb  gems_a_vs_a10_comparison.ipynb  gnps_mris_analysis.ipynb  isab_verification.ipynb  masked_attention_variant_visualization.executed.ipynb  mass_aware_rope_evaluation.executed.ipynb  massspecgym_precursor_logits.ipynb  massspecgym_processing_check.ipynb  noise_peak_replacement_analysis.ipynb  numerical_sensitivity_analysis.executed.ipynb  numerical_sensitivity_analysis_fp16_mitigation.executed.ipynb  sigreg_masking_and_views_strategy.ipynb  (+10 more)
(+65 files in other folders)
