[project]
name = "md4-mae-min"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "huggingface-hub>=0.33.2",
    "pandas>=2.0.0",
    "h5py>=3.11.0",
    "lightning==2.5.5",
    "matplotlib>=3.10.3",
    "ml-collections>=1.1.0",
    "rdkit>=2025.3.3",
    "scikit-learn>=1.8.0",
    "torch==2.11.0; sys_platform == 'linux'",
    "tensorflow-cpu==2.19.0; sys_platform == 'linux'",
    "tqdm>=4.66.4",
    "wandb==0.23.1",
    "gram-newton-schulz",
    "modal>=1.4.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

no-build-isolation-package = ["gram-newton-schulz"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
gram-newton-schulz = { git = "https://github.com/Dao-AILab/gram-newton-schulz" }
